v11/docs/ModelsCertificateRetrievalResponseExtendedKeyUsageModel.md
# ModelsCertificateRetrievalResponseExtendedKeyUsageModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Oid** | Pointer to **NullableString** |  | [optional] 
**DisplayName** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseExtendedKeyUsageModel

`func NewModelsCertificateRetrievalResponseExtendedKeyUsageModel() *ModelsCertificateRetrievalResponseExtendedKeyUsageModel`

NewModelsCertificateRetrievalResponseExtendedKeyUsageModel instantiates a new ModelsCertificateRetrievalResponseExtendedKeyUsageModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseExtendedKeyUsageModelWithDefaults

`func NewModelsCertificateRetrievalResponseExtendedKeyUsageModelWithDefaults() *ModelsCertificateRetrievalResponseExtendedKeyUsageModel`

NewModelsCertificateRetrievalResponseExtendedKeyUsageModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseExtendedKeyUsageModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) HasId() bool`

HasId returns a boolean if a field has been set.

### GetOid

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) GetOid() string`

GetOid returns the Oid field if non-nil, zero value otherwise.

### GetOidOk

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) GetOidOk() (*string, bool)`

GetOidOk returns a tuple with the Oid field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOid

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) SetOid(v string)`

SetOid sets Oid field to given value.

### HasOid

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) HasOid() bool`

HasOid returns a boolean if a field has been set.

### SetOidNil

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) SetOidNil(b bool)`

 SetOidNil sets the value for Oid to be an explicit nil

### UnsetOid
`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) UnsetOid()`

UnsetOid ensures that no value is present for Oid, not even an explicit nil
### GetDisplayName

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) GetDisplayName() string`

GetDisplayName returns the DisplayName field if non-nil, zero value otherwise.

### GetDisplayNameOk

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) GetDisplayNameOk() (*string, bool)`

GetDisplayNameOk returns a tuple with the DisplayName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayName

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) SetDisplayName(v string)`

SetDisplayName sets DisplayName field to given value.

### HasDisplayName

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) HasDisplayName() bool`

HasDisplayName returns a boolean if a field has been set.

### SetDisplayNameNil

`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) SetDisplayNameNil(b bool)`

 SetDisplayNameNil sets the value for DisplayName to be an explicit nil

### UnsetDisplayName
`func (o *ModelsCertificateRetrievalResponseExtendedKeyUsageModel) UnsetDisplayName()`

UnsetDisplayName ensures that no value is present for DisplayName, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


